Replace FindBugs (deprecated) with SpotBugs (community successor of FindBugs)